--- a/templates/index.html
+++ b/templates/index.html
@@ -45,22 +45,17 @@
                     <label for="team">Team/Department</label>
                     <select id="team" name="team" required>
                         <option value="">Select your team</option>
+                        <option value="Aeroshell">Aeroshell</option>
+                        <option value="Battery">Battery</option>
+                        <option value="Chassis">Chassis</option>
+                        <option value="Data Acquisition">Data Acquisition</option>
+                        <option value="Firmware">Firmware</option>
+                        <option value="Management">Management</option>
+                        <option value="Media">Media</option>
+                        <option value="Power Management Systems">Power Management Systems</option>
                         <option value="Solar Cells">Solar Cells</option>
-                        <option value="Fuel Cells">Fuel Cells</option>
-                        <option value="Batteries">Batteries</option>
-                        <option value="Supercapacitors">Supercapacitors</option>
-                        <option value="Materials Science">Materials Science</option>
-                        <option value="Electrochemistry">Electrochemistry</option>
-                        <option value="Nanotechnology">Nanotechnology</option>
-                        <option value="Energy Storage">Energy Storage</option>
-                        <option value="Renewable Energy">Renewable Energy</option>
-                        <option value="Chemical Engineering">Chemical Engineering</option>
-                        <option value="Electrical Engineering">Electrical Engineering</option>
-                        <option value="Mechanical Engineering">Mechanical Engineering</option>
-                        <option value="Administration">Administration</option>
-                        <option value="IT Support">IT Support</option>
-                        <option value="Finance">Finance</option>
-                        <option value="Other">Other</option>
+                        <option value="Strategies">Strategies</option>
+                        <option value="Suspension">Suspension</option>
                     </select>
                 </div>
                 
