--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -181,6 +181,14 @@
                                         
                                         <div class="form-row">
                                             <div class="form-group">
+                                                <label for="usd_taxes_{{ form_num }}">Taxes (USD)</label>
+                                                <input type="number" id="usd_taxes_{{ form_num }}" name="usd_taxes_{{ form_num }}" min="0" step="0.01" placeholder="0.00">
+                                                <small class="financial-help">Sales tax, state tax, or other applicable taxes</small>
+                                            </div>
+                                        </div>
+                                        
+                                        <div class="form-row">
+                                            <div class="form-group">
                                                 <label for="canadian_amount_{{ form_num }}">Canadian Amount (CAD)</label>
                                                 <input type="number" id="canadian_amount_{{ form_num }}" name="canadian_amount_{{ form_num }}" min="0" step="0.01" placeholder="0.00">
                                                 <small class="financial-help">Equivalent amount in Canadian dollars for reimbursement</small>
