--- a/purchase_request-site/templates/dashboard.html
+++ b/purchase_request-site/templates/dashboard.html
@@ -184,7 +184,7 @@
                                             <div class="form-group">
                                                 <label for="us_total_{{ form_num }}">US Subtotal (USD)</label>
                                                 <input type="number" id="us_total_{{ form_num }}" name="us_total_{{ form_num }}" min="0" step="0.01" placeholder="0.00">
-                                                <small class="financial-help">Total amount paid in US dollars</small>
+                                                <small class="financial-help">Subtotal in US dollars</small>
                                             </div>
                                         </div>
                                         
