--- a/purchase_request_site/templates/index.html
+++ b/purchase_request_site/templates/index.html
@@ -215,11 +215,11 @@
             <div class="form-group">
                 <label for="signature">Digital Signature *</label>
                 <div class="custom-file-upload">
-                    <input type="file" id="signature" name="signature" accept=".png,.jpg,.jpeg,.pdf" required onchange="updateFileName(this, 'signature-filename')">
+                    <input type="file" id="signature" name="signature" accept=".png,.jpg,.jpeg" required onchange="updateFileName(this, 'signature-filename')">
                     <span class="file-upload-btn" onclick="document.getElementById('signature').click()">Choose File</span>
                     <span class="file-name" id="signature-filename">No file chosen</span>
                 </div>
-                <small class="form-help">Upload your signature (PNG, JPG, or PDF format)</small>
+                <small class="form-help">Upload your signature (PNG, JPG, or JPEG format)</small>
             </div>
 
             <div class="form-group">
