--- a/purchase_request_site/templates/user_profile.html
+++ b/purchase_request_site/templates/user_profile.html
@@ -127,7 +127,7 @@
         {% endif %}
         
         <div class="actions">
-            <a href="/" class="btn">🚀 Create New Purchase Request</a>
+            <a href="/dashboard?user_email={{ user.email }}&use_saved=true" class="btn">🚀 Create New Purchase Request</a>
             <a href="/logout" class="btn btn-secondary">🚪 Logout</a>
         </div>
     </div>
